# evals

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: ci.yml  deploy-docs.yml  docs-dispatch.yaml
contribute/: AGENTS.md  BEST_PRACTICES.md  EVALUATION_CHECKLIST.md
data/sandboxes/coding_env/: Dockerfile  docker-requirements.txt
docs/: eval-list.md  faq.md  getting-started.md  quickstart.md  running-evaluations.md
notebooks/: 1-evaluating-llm.ipynb  2-comparing-models.ipynb
notebooks/use_cases/: evaluating_opensource_model.ipynb  evaluating_unreleased_model.ipynb
scripts/: upload_full_benchmarks.py  upload_oranbench.py  upload_srsranbench.py
src/evals/: __init__.py  _registry.py  run_evals.py
src/evals/cli/: __init__.py  app.py  base_screen.py  conftest.py  constants.py  diagram.md  types.py
src/evals/cli/config/: __init__.py  env_manager.py
src/evals/cli/preflight/: __init__.py  find_k.py
src/evals/cli/preflight/tests/: __init__.py  conftest.py  test_edge_cases.py  test_find_k.py  test_runner.py
src/evals/cli/screens/: __init__.py  main_menu.py  welcome.py
src/evals/cli/screens/preview_leaderboard/: __init__.py  preview_leaderboard_screen.py
src/evals/cli/screens/run_evals/: __init__.py  run_evals_screen.py
src/evals/cli/screens/run_evals/tests/: test_run_evals_screens.py  test_subprocess_termination.py
src/evals/cli/screens/set_models/: __init__.py  api_key_input.py  category_menu.py  model_input.py  provider_select.py
src/evals/cli/screens/set_models/tests/: __init__.py  test_model_storage.py  test_provider_api_keys.py
src/evals/cli/screens/settings/: __init__.py  settings_screen.py
src/evals/cli/screens/submit/: __init__.py  github_service.py  submit_screen.py  trajectory_bundler.py
src/evals/cli/screens/submit/tests/: conftest.py  test_github_service.py  test_submit_screen.py  test_trajectory_bundler.py
src/evals/cli/screens/tests/: __init__.py  test_app.py
src/evals/cli/services/: __init__.py  huggingface_client.py  irt_fitter.py  tci_calculator.py
src/evals/cli/services/tests/: __init__.py  test_irt_fitter.py
src/evals/cli/utils/: __init__.py  model_parser.py
src/evals/cli/widgets/: __init__.py  menu.py
src/evals/oranbench/: README.md  __init__.py  oranbench.py
src/evals/srsranbench/: README.md  __init__.py  srsranbench.py
src/evals/telelogs/: README.md  __init__.py  telelogs.py  utils.py
src/evals/telemath/: README.md  __init__.py  telemath.py
src/evals/teleqna/: README.md  __init__.py  teleqna.py
src/evals/teletables/: README.md  __init__.py  teletables.py
src/evals/three_gpp/: README.md  __init__.py  three_gpp.py
src/open_telco/: __init__.py  _registry.py  run_evals.py
src/open_telco/cli/: __init__.py  app.py  base_screen.py  conftest.py  constants.py  diagram.md  types.py
src/open_telco/cli/config/: env_manager.py
src/open_telco/cli/preflight/: __init__.py  edge_cases.py  find_k.py  runner.py  stress_test.py
src/open_telco/cli/preflight/tests/: conftest.py  test_edge_cases.py  test_find_k.py  test_runner.py
src/open_telco/cli/screens/: __init__.py  main_menu.py  welcome.py
src/open_telco/cli/screens/preview_leaderboard/: preview_leaderboard_screen.py
src/open_telco/cli/screens/run_evals/: __init__.py  run_evals_screen.py
src/open_telco/cli/screens/run_evals/tests/: __init__.py  test_run_evals_screens.py  test_subprocess_termination.py
src/open_telco/cli/screens/set_models/: api_key_input.py  category_menu.py  model_input.py  provider_select.py
src/open_telco/cli/screens/set_models/tests/: test_model_storage.py  test_provider_api_keys.py
src/open_telco/cli/screens/settings/: settings_screen.py
src/open_telco/cli/screens/submit/: __init__.py  github_service.py  submit_screen.py  trajectory_bundler.py
src/open_telco/cli/screens/submit/tests/: __init__.py  conftest.py  test_github_service.py  test_submit_screen.py  test_trajectory_bundler.py
src/open_telco/cli/screens/tests/: test_app.py
src/open_telco/cli/services/: __init__.py  huggingface_client.py  irt_fitter.py  tci_calculator.py
src/open_telco/cli/services/tests/: test_irt_fitter.py
src/open_telco/cli/utils/: __init__.py  model_parser.py  process.py
src/open_telco/cli/widgets/: __init__.py  menu.py
src/open_telco/telelogs/: README.md  __init__.py  telelogs.py  utils.py
src/open_telco/telemath/: README.md  __init__.py  telemath.py
src/open_telco/teleqna/: README.md  __init__.py  teleqna.py
src/open_telco/three_gpp/: README.md  __init__.py
tests/cli/: conftest.py  test_app.py  test_find_k.py  test_github_service.py  test_irt_fitter.py  test_model_storage.py  test_preflight.py  test_run_evals_screens.py  test_subprocess_termination.py  test_trajectory_bundler.py
website/: docusaurus.config.ts  package.json
website/src/constants/: providers.ts
website/src/hooks/: useLeaderboardData.ts
website/src/utils/: parseJSON.ts
website/tabs/leaderboard/data/: leaderboard.json
